modules/wycs/tests/valid/test_058.wyal
assert:
  forall ({int} xs):
       |xs| > 0 ==> exists(int x) ; x in xs
