modules/wycs/tests/invalid/test_064.wyal
assert:
  forall({int} xs):
    |xs| > 0